# flag-symmetry

./: Cargo.toml  Dockerfile  README.md  results.csv
src/: fetch_flags.rs  fetching_flags.rs  main.rs  symmetry.rs
src/consts/: countries.rs
