[package]
name = "flag_symmetry"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "*", features = ["json", "blocking"] }
bytes = "1.1.0"  
tokio = { version = "1", features = ["full"] }
image = "0.25.1"
lazy_static = "1.4.0"
prettytable-rs = "0.10.0"
itertools = "0.13.0"

csv = "1.3.0"
indicatif = "0.17.8"